[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "growatt_pico_reader"
version = "0.0.1"
authors = [
  { name="Jan TTLES Grygar", email="ttles33@gmail.com" },
]
description = ""
keywords = ["pico", "pico w", "raspberry", "growatt", "photovaltic"]
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/pypa/sampleproject/issues"